--- a/android/avd/hardware-properties.ini
+++ b/android/avd/hardware-properties.ini
@@ -238,6 +238,13 @@ enum        = auto, host, mesa
 abstract    = GPU emulation mode
 description = This value determines how GPU emulation is implemented.
 
+name        = hw.gpu.blacklisted
+type        = string
+default     = no
+enum        = no, yes
+abstract    = GPU on-blacklist mode
+description = This value determines if the GPU is considered blacklisted. Testing purposes only.
+
 # Configures the initial orientation: portrait or landscape
 #
 name        = hw.initialOrientation
