Use SwANGLE in OpenglRender_unittests for Mac
We need to change the library path, as well as set the environment
variable. The SwANGLE environment variable does not impact
non-ANGLE configs.

Bug: 246618134
Test: objs/OpenglRender_unittests run to completion
Change-Id: I5088d9e0a59945a37b802d4cd40af37544262125

--- a/android/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
+++ b/android/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
@@ -16,8 +16,9 @@ function(add_opengl_dependencies TGT)
     linux
     "LINK_FLAGS<=-Wl,-rpath,'$ORIGIN/lib64/gles_swiftshader' -Wl,--disable-new-dtags"
   )
+  # SwANGLE
   android_target_properties(
-    ${TGT} darwin "INSTALL_RPATH>=@loader_path/lib64/gles_swiftshader")
+    ${TGT} darwin "INSTALL_RPATH>=@loader_path/lib64/gles_angle")
 endfunction()
 
 android_add_library(
