[android-webrtc] Add android-webrtc as a shared library and run RTC service inside emulator
1, Replace gRPC video and audio source with built-in video and audio
source. Ideally, this change will reduce latency.
2, Modified EventForwarder to forward events directly to emulator and
use adbInterface instead of adb port for communication.
3, Enable this change for Linux and MacOS only. Because on Windows,
there is a bug in compiling android-grpc-services as a shared library
and protobuf doesn't allows each proto file to be registered more than
once.

Bug: 224631432

Signed-off-by: Weilun Du <wdu@google.com>
Change-Id: I1271aaaefc8a32688ae740d4048dd4c9a62ba232

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,19 +83,19 @@ set(OPTION_CLANG_TIDY
 set(OPTION_CLANG_TIDY_FIX FALSE
     CACHE BOOL "True if you wish clang-tidy to auto fix issues it encounters.")
 set(QTWEBENGINE FALSE CACHE BOOL "True if the webengine should be enabled.")
-if(LINUX_X86_64 OR LINUX_AARCH64)
+if(NOT WINDOWS_MSVC_X86_64)
   set(WEBRTC
       TRUE
       CACHE
         BOOL
-        "True if the emulator should be build with WEBRTC support. Defaults on for Linux"
+        "True if the emulator should be build with WEBRTC support."
   )
 else()
   set(WEBRTC
       FALSE
       CACHE
         BOOL
-        "True if the emulator should be build with WEBRTC support. Defaults on for Linux"
+        "True if the emulator should be build with WEBRTC support. Defaults on for Linux and MacOS"
   )
 endif()
 set(ANDROIDSTUDIO FALSE
@@ -157,7 +157,6 @@ endif()
 if(GFXSTREAM)
   set(OPTION_GFXSTREAM_BACKEND TRUE)
   set(OPTION_TCMALLOC FALSE)
-  set(WEBRTC FALSE)
   set(ANDROIDSTUDIO FALSE)
 endif()
 
