Add Process.h/cpp for goldfish-opengl build
Bug: N/A
Test: Presubmit
Change-Id: Ia0537c7df1bf2221934b70a84658547a6a9837b8

--- a/android/android-emu-base/CMakeLists.txt
+++ b/android/android-emu-base/CMakeLists.txt
@@ -46,6 +46,7 @@ android_add_library(
       android/base/GLObjectCounter.cpp
       android/base/IOVector.cpp
       android/base/JsonWriter.cpp
+      android/base/Process.cpp
       android/base/misc/FileUtils.cpp
       android/base/misc/HttpUtils.cpp
       android/base/misc/IpcPipe.cpp
