Disable webrtc on Mac temporarily
webrtc_modules_audio_coding_audio_decoder_unittests test failure on Mac M1.

Bug: 224631432

Signed-off-by: Weilun Du <wdu@google.com>
Change-Id: If718f86f1cda983e9e6e31921b0911233fde79bd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,7 @@ set(OPTION_CLANG_TIDY
 set(OPTION_CLANG_TIDY_FIX FALSE
     CACHE BOOL "True if you wish clang-tidy to auto fix issues it encounters.")
 set(QTWEBENGINE FALSE CACHE BOOL "True if the webengine should be enabled.")
-if(NOT WINDOWS_MSVC_X86_64)
+if(LINUX_X86_64 OR LINUX_AARCH64)
   set(WEBRTC
       TRUE
       CACHE
