--- a/android/android-webrtc/CMakeLists.txt
+++ b/android/android-webrtc/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 3.5)
 set(CMAKE_CXX_STANDARD 17)
 include(android)
 add_subdirectory(${AOSP_ROOT}/external/webrtc webrtc)
+add_subdirectory(videobridge)
 add_subdirectory(android-webrtc)
