Add missing .proto file
This file is needed for those who want to interact with bluetooth.

Bug: 226598403
Change-Id: I0b23958be6606856c59dc7e92cce683a32473808

--- a/android/android-grpc/CMakeLists.txt
+++ b/android/android-grpc/CMakeLists.txt
@@ -265,8 +265,8 @@ if(BLUETOOTH_EMULATION)
     GENERATED BLUETOOTH_SERVICE_GRPC_SRC)
 
   # Lets distribute the proto file
-  install(FILES emulated_bluetooth.proto emulated_bluetooth_device.proto
-                emulated_bluetooth_packets.proto emulated_bluetooth_vhci.proto
+  install(FILES emulated_bluetooth.proto emulated_bluetooth_device.proto grpc_endpoint_description.proto
+                emulated_bluetooth_packets.proto emulated_bluetooth_vhci.proto grpc_endpoint_description.proto
           DESTINATION lib)
 
   android_add_library(
