--- a/android/emulator/CMakeLists.txt
+++ b/android/emulator/CMakeLists.txt
@@ -86,9 +86,11 @@ endif()
 android_target_dependency(emulator all EMULATOR_FEATURE_DEPENDENCIES)
 android_target_dependency(emulator all EMULATOR_KEYMAP_DEPENDENCIES)
 android_target_dependency(emulator all EMULATOR_BIOS_DEPENDENCIES)
-android_target_dependency(emulator all SWIFTSHADER_DEPENDENCIES)
+android_target_dependency(emulator windows SWIFTSHADER_DEPENDENCIES)
+android_target_dependency(emulator linux SWIFTSHADER_DEPENDENCIES)
 if(NOT LINUX_AARCH64)
   android_target_dependency(emulator all ANGLE_DEPENDENCIES)
+  android_target_dependency(emulator all ANGLE_RENDERER_DEPENDENCIES)
 endif()
 android_target_dependency(emulator all RUNTIME_OS_DEPENDENCIES)
 android_target_dependency(emulator all E2FSPROGS_DEPENDENCIES)
@@ -100,10 +102,6 @@ android_target_dependency(emulator all VULKAN_DEPENDENCIES)
 android_target_dependency(emulator linux TCMALLOC_OS_DEPENDENCIES)
 android_target_dependency(emulator windows_msvc-x86_64
                           GLIB2_WINDOWS_DEPENDENCIES)
-android_target_dependency(emulator windows_msvc-x86_64
-                          ANGLE_RENDERER_DEPENDENCIES)
-android_target_dependency(emulator darwin-x86_64 ANGLE_RENDERER_DEPENDENCIES)
-android_target_dependency(emulator darwin-aarch64 ANGLE_RENDERER_DEPENDENCIES)
 android_target_dependency(emulator windows_msvc-x86_64 MSVC_DEPENDENCIES)
 # And install them for a release.
 # TODO(b/141205876): prebuilt executables are losing their execute permission on
@@ -116,11 +114,10 @@ endif()
 android_install_dependency(all EMULATOR_FEATURE_DEPENDENCIES)
 android_install_dependency(all EMULATOR_KEYMAP_DEPENDENCIES)
 android_install_dependency(all EMULATOR_BIOS_DEPENDENCIES)
-android_install_dependency(all SWIFTSHADER_DEPENDENCIES)
+android_install_dependency(windows SWIFTSHADER_DEPENDENCIES)
+android_install_dependency(linux SWIFTSHADER_DEPENDENCIES)
 if(NOT LINUX_AARCH64)
   android_install_dependency(all ANGLE_DEPENDENCIES)
-endif()
-if(DARWIN_X86_64 OR DARWIN_AARCH64)
   android_install_dependency(all ANGLE_RENDERER_DEPENDENCIES)
 endif()
 
