--- a/android/emu/agents/CMakeLists.txt
+++ b/android/emu/agents/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(android-emu-agents-headers INTERFACE)
 target_include_directories(android-emu-agents-headers INTERFACE include)
 if(OPTION_GFXSTREAM_BACKEND)
-  target_link_libraries(android-emu-agents-headers INTERFACE gfxstream-host-common.headers)
+  target_link_libraries(android-emu-agents-headers INTERFACE aemu-host-common.headers)
 endif()
 android_license(TARGET "android-emu-agents-headers" LIBNAME None SPDX None LICENSE Apache-2.0 LOCAL None)
 
