Revert "Revert "[android-webrtc] Add android-webrtc as a shared ..."
Revert submission 2240713-revert-2229200-android-emu-webrtc-SNIVEEKVXL

Reason for revert: Regression was fixed in b/228889207
Reverted Changes:
I47f38e36e:Revert "[android-webrtc] Remove goldfish-webrtc-br...
I2305612c7:Revert "[android-webrtc] Add android-webrtc as a s...

Change-Id: I4f7f726e0109e2ad1c2dc7f670f2bb7ed7437115

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,7 @@ if(LINUX_X86_64 OR LINUX_AARCH64)
       TRUE
       CACHE
         BOOL
-        "True if the emulator should be build with WEBRTC support. Defaults on for Linux"
+        "True if the emulator should be build with WEBRTC support."
   )
 else()
   set(WEBRTC
@@ -157,7 +157,6 @@ endif()
 if(GFXSTREAM)
   set(OPTION_GFXSTREAM_BACKEND TRUE)
   set(OPTION_TCMALLOC FALSE)
-  set(WEBRTC FALSE)
   set(ANDROIDSTUDIO FALSE)
 endif()
 
