downloadable snapshot: add feature DownloadableSnapshot
Bug: 249176844

Change-Id: I2fc97699b2468be0ceb7063bc0299657d00497c6

--- a/android/data/advancedFeatures.ini
+++ b/android/data/advancedFeatures.ini
@@ -415,6 +415,10 @@ AsyncComposeSupport = off
 # Enables the virtio-snd audio card and disables the Intel HDA one
 VirtioSndCard = on
 
+# DownloadableSnapshot -----------------------------------------------------------------
+# Enables downloadable snapshot
+DownloadableSnapshot = on
+
 # VirtioTablet-----------------------------------------------------------------
 # If enabled, the emulator will create tablet input events for guests, otherwise
 # it creates multi-touch events. Cannot be used with VirtioMouse.
