gfxstream: add vulkan-cereal/utils dependency.
Bug: 246990929
Test: android/rebuild.sh --gfxstream
Change-Id: Ic46c4dc67792e8ab378c14245bdeb1a2d39de849

--- a/android/android-emugl/combined/CMakeLists.txt
+++ b/android/android-emugl/combined/CMakeLists.txt
@@ -186,6 +186,7 @@ if(OPTION_GFXSTREAM_BACKEND)
 
     # Backends######################################################################
 
+    add_subdirectory(${GFXSTREAM_REPO_ROOT}/utils ${GFXSTREAM_PREFIX}-utils)
     add_subdirectory(${GFXSTREAM_REPO_ROOT}/stream-servers ${GFXSTREAM_PREFIX}-stream-servers)
 
     # Protocols and associated code generators######################################
