downloadable snapshot: add avd specific options to control the behavior
Bug: 249176844

Change-Id: Ia2be75b8ae57af3129a0d86686e35d03831666cc

--- a/android/emu/avd/src/android/avd/hardware-properties.ini
+++ b/android/emu/avd/src/android/avd/hardware-properties.ini
@@ -898,6 +898,30 @@ default     = no
 abstract    = Always use cold boot
 description = If set, AVD will always use the full cold boot instead of snapshot-based quick boot process
 
+# use Downloadable snapshot from snapshots/downloaded/avd to speed up first boot
+#
+name        = firstboot.bootFromDownloadableSnapshot
+type        = boolean
+default     = yes
+abstract    = Always use downloaded snapshot to speed up first boot
+description = If set, AVD will always use the snapshots/downloaded/avd to speed up first boot
+
+
+# use Local snapshot at snapshots/local/avd to speed up first boot
+#
+name        = firstboot.bootFromLocalSnapshot
+type        = boolean
+default     = yes
+abstract    = Always use local snapshot to speed up first boot
+description = If set, AVD will always use the snapshots/local/avd to speed up first boot
+
+# save a local snapshot at snapshots/local/avd to speed up subsequent first boot
+#
+name        = firstboot.saveToLocalSnapshot
+type        = boolean
+default     = yes
+abstract    = Always save a local snapshot to speed up first boot
+description = If set, AVD will save a snapshot to snapshots/local/avd, if it does not exist
 
 # SDK Path used during generation of this hardware configuration
 name        = android.sdk.root
