--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -225,7 +225,7 @@ if(ANDROID_EXTRACT_SYMBOLS AND CROSSCOMPILE)
   set(ANDROID_EXTRACT_SYMBOLS FALSE)
 endif()
 
-if(NOT QTWEBENGINE)
+if(NOT WIN32)
   set(FEATURE_NETSIM TRUE)
 endif()
 
