android-emugl: remove ${vulkan-cereal}/third_party/angle deps
This patch removes references to ${vulkan-cereal}/third_party/angle.
The AEMU gfxstream build relied on ANGLE for Khronos headers,
and now that's added here.

This change does not build the shader translator or enable the
USE_ANGLE_SHADER_PARSER option.  One issue is the angle in at
{EMU_ROOT}/external/angle has diverged from the the one that is
in vulkan-cereal.  Many paths/files are renamed -- for example,

src/compiler/translator/tree_ops/AddDefaultReturnStatements.cpp

is now

src/compiler/translator/tree_ops/d3d/AddDefaultReturnStatements.cpp

(there are many changes like this).

The current production emulator build (non-gfxstream) actually uses
prebuilts available at:

{EMU_ROOT}/prebuilts/android-emulator-build/common

for both headers/libraries for the shader translator.  That's actually
a simpler strategy than building from the ANGLE repo, and gfxstream
could do this.

The shader translator/parser is useful for GLES on GL MacOS.

There is also the possibility using:

- Host ANGLE (Metal)
- Host Angle (GL)
- ANGLE + MoltenVK

Current CTS results are here:

angle/src/tests/deqp_support/deqp_gles3_test_expectations.txt

Since there are many options and the emulator doesn't use gfxstream
in production yet, this change punts on actually linking with the
translator/parser with gfxstream.

BUG=246833343
TEST=compile

Change-Id: If96d4edbc2ae552d8d2d870f15f5fde47d413708

--- a/android/android-emugl/combined/CMakeLists.txt
+++ b/android/android-emugl/combined/CMakeLists.txt
@@ -16,6 +16,7 @@ endfunction()
 if(OPTION_GFXSTREAM_BACKEND)
     set(GFXSTREAM_REPO_ROOT ${ANDROID_QEMU2_TOP_DIR}/../../device/generic/vulkan-cereal)
     set(AEMU_COMMON_REPO_ROOT ${ANDROID_QEMU2_TOP_DIR}/../../hardware/google/aemu)
+    set(ANGLE_REPO_ROOT ${ANDROID_QEMU2_TOP_DIR}/../../external/angle)
 
     set(BUILD_STANDALONE OFF)
     set(ENABLE_VKCEREAL_TESTS ON)
@@ -109,6 +110,8 @@ if(OPTION_GFXSTREAM_BACKEND)
         add_definitions(-DVIRGL_RENDERER_UNSTABLE_APIS)
     endif()
 
+    add_definitions("-I${ANGLE_REPO_ROOT}/include")
+
     if(UNIX AND NOT APPLE)
         set(LINUX TRUE)
     endif()
@@ -175,7 +178,6 @@ if(OPTION_GFXSTREAM_BACKEND)
 
     set(EXTRA_SUBDIR_TEST_INCLUDE_FILES)
     # Third party dependencies
-    add_subdirectory(${GFXSTREAM_REPO_ROOT}/third-party/angle ${GFXSTREAM_PREFIX}-third-party-angle)
     add_subdirectory(${GFXSTREAM_REPO_ROOT}/third-party/renderdoc ${GFXSTREAM_PREFIX}-third-party-renderdoc)
     add_subdirectory(${GFXSTREAM_REPO_ROOT}/third-party/stb ${GFXSTREAM_PREFIX}-third-party-stb)
     add_subdirectory(${GFXSTREAM_PROTOCOLS_DIR} ${GFXSTREAM_PREFIX}-gfxstream-protocols)
@@ -226,8 +228,8 @@ if(OPTION_GFXSTREAM_BACKEND)
                    LIBNAME gfxstream
                    URL "https://android.googlesource.com/device/generic/vulkan-cereal/+/refs/heads/master"
                    SPDX Apache-2.0
-                   LOCAL "${ANDROID_QEMU2_TOP_DIR}/../../device/generic/vulkan-cereal/third-party/angle/LICENSE"
-                   LICENSE "https://android.googlesource.com/device/generic/vulkan-cereal/+/refs/heads/master/third-party/angle/LICENSE")
+                   LOCAL "${ANDROID_QEMU2_TOP_DIR}/../../device/generic/vulkan-cereal/LICENSE"
+                   LICENSE "https://android.googlesource.com/device/generic/vulkan-cereal/+/refs/heads/master/LICENSE")
 endif()
 
 # TODO(joshuaduong): Make it work for gfxstream build.
