--- a/android/android-emugl/combined/CMakeLists.txt
+++ b/android/android-emugl/combined/CMakeLists.txt
@@ -3,23 +3,17 @@ prebuilt(ANGLE)
 prebuilt(VULKAN)
 
 function(add_opengl_dependencies TGT)
-    android_target_dependency(${TGT} windows_msvc-x86_64 SWIFTSHADER_DEPENDENCIES)
-    android_target_dependency(${TGT} linux-aarch64 SWIFTSHADER_DEPENDENCIES)
-    android_target_dependency(${TGT} linux-x86_64 ANGLE_RENDERER_DEPENDENCIES)
+    android_target_dependency(${TGT} windows SWIFTSHADER_DEPENDENCIES)
+    # b/257077718 Linux presubmit is flaky with SwANGLE
+    android_target_dependency(${TGT} linux SWIFTSHADER_DEPENDENCIES)
     android_target_dependency(${TGT} darwin ANGLE_RENDERER_DEPENDENCIES)
     android_target_dependency(${TGT} all ANGLE_DEPENDENCIES)
     android_target_dependency(${TGT} all VULKAN_DEPENDENCIES)
     android_target_dependency(${TGT} all VULKAN_TEST_DEPENDENCIES)
     android_target_properties(
         ${TGT}
-        linux-aarch64
+        linux
         "LINK_FLAGS<=-Wl,-rpath,'$ORIGIN/lib64/gles_swiftshader' -Wl,--disable-new-dtags"
-      )
-    # SwANGLE
-    android_target_properties(
-        ${TGT}
-        linux-x86_64
-        "LINK_FLAGS<=-Wl,-rpath,'$ORIGIN/lib64/gles_angle' -Wl,--disable-new-dtags"
       )
     android_target_properties(
         ${TGT} darwin "${RUNTIME_OS_PROPERTIES} INSTALL_RPATH>=@loader_path/lib64/gles_angle")
@@ -311,21 +305,14 @@ if(NOT OPTION_GFXSTREAM_BACKEND AND NOT WINDOWS AND NOT BUILDING_FOR_AARCH64)
                             EMULATOR_FEATURE_DEPENDENCIES)
   android_target_dependency(emugl_combined_unittests windows_msvc-x86_64
                             SWIFTSHADER_DEPENDENCIES)
-  android_target_dependency(emugl_combined_unittests linux-aarch64
+  android_target_dependency(emugl_combined_unittests linux
                             SWIFTSHADER_DEPENDENCIES)
-  android_target_dependency(emugl_combined_unittests linux-x86_64
-                            ANGLE_RENDERER_DEPENDENCIES)
   android_target_dependency(emugl_combined_unittests darwin
                             ANGLE_RENDERER_DEPENDENCIES)
   android_target_properties(
     emugl_combined_unittests
-    linux-aarch64
+    linux
     "LINK_FLAGS<=-Wl,-rpath,'$ORIGIN/lib64/gles_swiftshader' -Wl,--disable-new-dtags")
-    # SwANGLE
-  android_target_properties(
-    emugl_combined_unittests
-    linux-x86_64
-    "LINK_FLAGS<=-Wl,-rpath,'$ORIGIN/lib64/gles_angle' -Wl,--disable-new-dtags")
   android_target_properties(
     emugl_combined_unittests
     darwin
@@ -350,21 +337,14 @@ if(NOT OPTION_GFXSTREAM_BACKEND AND NOT WINDOWS AND NOT BUILDING_FOR_AARCH64)
                             EMULATOR_FEATURE_DEPENDENCIES)
                             android_target_dependency(emugl_combined_unittests windows_msvc-x86_64
                             SWIFTSHADER_DEPENDENCIES)
-  android_target_dependency(aemugraphics_toplevel_unittests linux-aarch64
+  android_target_dependency(aemugraphics_toplevel_unittests linux
                             SWIFTSHADER_DEPENDENCIES)
-  android_target_dependency(aemugraphics_toplevel_unittests linux-x86_64
-                            ANGLE_RENDERER_DEPENDENCIES)
   android_target_dependency(aemugraphics_toplevel_unittests darwin
                             ANGLE_RENDERER_DEPENDENCIES)
   android_target_properties(
     aemugraphics_toplevel_unittests
-    linux-aarch64
+    linux
     "LINK_FLAGS<=-Wl,-rpath,'$ORIGIN/lib64/gles_swiftshader' -Wl,--disable-new-dtags")
-    # SwANGLE
-  android_target_properties(
-    aemugraphics_toplevel_unittests
-    linux-x86_64
-    "LINK_FLAGS<=-Wl,-rpath,'$ORIGIN/lib64/gles_angle' -Wl,--disable-new-dtags")
   android_target_properties(
     aemugraphics_toplevel_unittests
     darwin
