Vendorize winapi-util for Windows
This brings in our own version of winapi-util, which we
need to successfully compile lmp on windows.

The one in the chromium repo does not function.

Change-Id: Iea16f210203de335fdc663696fb06f957ccdfca8

--- a/android/bluetooth/rootcanal/CMakeLists.txt
+++ b/android/bluetooth/rootcanal/CMakeLists.txt
@@ -209,7 +209,7 @@ target_include_directories(
 target_compile_options(libbt-rootcanal
                        PUBLIC -Wno-inconsistent-missing-override)
 
-if(TARGET Rust::Rustc AND NOT WINDOWS_MSVC_X86_64)
+if(TARGET Rust::Rustc)
   add_subdirectory(lmp)
 else()
   message(WARNING "Disabling lmp for bluetooth, no complete toolchain present (Windows/M1)")
