Use TEST_PARAMS to ignore tests
It turns out that ctest -E does not work with method level. Use
TEST_PARAMS instead.

Test: AsyncManagerSocketTest.TestMultipleConnections should skip
Change-Id: Ie340fd941c5ab9baa3d80e735c6edc2c126328db

--- a/android/bluetooth/rootcanal/CMakeLists.txt
+++ b/android/bluetooth/rootcanal/CMakeLists.txt
@@ -242,7 +242,10 @@ android_add_test(
   # DARWIN # cmake-format: sortable
   # test/async_manager_unittest.cc
   LINUX # cmake-format: sortable
-        test/async_manager_unittest.cc test/posix_socket_unittest.cc)
+        test/async_manager_unittest.cc test/posix_socket_unittest.cc
+  TEST_PARAMS
+      --gtest_filter=-AsyncManagerSocketTest.TestMultipleConnections
+)
 
 # Disable until we stabilise the non determinism DARWIN # cmake-format: sortable
 # test/posix_socket_unittest.cc)
