--- a/android/android-grpc/python/aemu-grpc/pyproject.toml
+++ b/android/android-grpc/python/aemu-grpc/pyproject.toml
@@ -18,8 +18,16 @@ classifiers = ["Topic :: Software Development"]
 
 dependencies = [
     "grpcio==1.48.1",
+    "protobuf==3.20.1",
     "tink==1.7.0; sys_platform != 'win32'",
     "importlib-metadata; python_version<'3.8'",
+]
+
+[project.optional-dependencies]
+tests = [
+    "pytest==7.1.3",
+    "pytest-mock",
+    "mock==4.0.3",
 ]
 
 [tool.pytest.ini_options]
